[package]
name = "memberlist-embassy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Async no_std memberlist driver over the embassy-net network stack."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["memberlist-proto/std", "memberlist-embedded/std", "bytes/std"]
alloc = ["memberlist-proto/alloc", "memberlist-embedded/alloc"]

# CIDR peer-admission allow-list. A `CidrPolicy` set via `Options::with_cidr_policy`
# filters inbound gossip by datagram source and inbound reliable connections by
# peer address at the transport boundary, AND inbound alives by the peer's
# advertised address at membership admission. no_std+alloc, so it floors on `alloc`.
cidr = ["alloc", "memberlist-proto/cidr", "memberlist-embedded/cidr"]

# Gossip/reliable-plane compression backends. Each pass-through enables the
# matching machine backend so the driver's `TransformOptions` can carry a
# `CompressionOptions` for that algorithm; without one the algorithm's
# `compress_gossip` falls back to plaintext and the reliable-plane bridge
# cannot pack. Each also pulls a base tier so the feature is self-contained
# (enabling it alone is a valid build — `cargo hack --each-feature` does so):
# lz4 is no_std+alloc, so it floors on `alloc`; snappy/zstd/brotli are std-only
# (mirroring the machine, so the tier is never silently under-selected on a
# no_std build), so they floor on `std`.
lz4 = ["alloc", "memberlist-embedded/lz4"]
snappy = ["std", "memberlist-embedded/snappy"]
zstd = ["std", "memberlist-embedded/zstd"]
brotli = ["std", "memberlist-embedded/brotli"]

# Gossip-plane (unreliable) checksum backends. Applied only to outbound gossip
# datagrams; the reliable-plane bridge carries no checksum (it relies on the
# stream transport's integrity). All backends are no_std+alloc, so each floors
# on `alloc` (like lz4) — enabling one alone is a valid build.
crc32 = ["alloc", "memberlist-embedded/crc32"]
xxhash32 = ["alloc", "memberlist-embedded/xxhash32"]
xxhash64 = ["alloc", "memberlist-embedded/xxhash64"]
xxhash3 = ["alloc", "memberlist-embedded/xxhash3"]
murmur3 = ["alloc", "memberlist-embedded/murmur3"]

# Gossip/reliable-plane AEAD encryption backends. Each pass-through enables the
# matching machine backend so a `TransformOptions` carrying a `Keyring` for that
# cipher can actually encrypt; without the backend `encrypt_gossip` returns
# `EncryptionError::UnsupportedAlgorithm`. Both AEAD backends are no_std+alloc,
# so each floors on `alloc` to stay a valid standalone build.
aes-gcm = ["alloc", "memberlist-embedded/aes-gcm"]
chacha20-poly1305 = ["alloc", "memberlist-embedded/chacha20-poly1305"]

[dependencies]
memberlist-proto = { workspace = true, default-features = false, features = [
  "tcp",
] }
memberlist-embedded = { workspace = true, default-features = false }
embassy-net = { workspace = true, features = [
  "udp",
  "tcp",
  "proto-ipv4",
  "proto-ipv6",
  "medium-ethernet",
] }
embassy-time.workspace = true
embassy-sync.workspace = true
embassy-futures.workspace = true
bytes.workspace = true
getrandom.workspace = true

[dev-dependencies]
# A time driver so `embassy_time::Instant::now()` works in the unit tests (the
# production build leaves the driver to the embedded app). `std` is test-only;
# `generic-queue-8` is the self-contained timer queue.
embassy-time = { workspace = true, features = ["std", "generic-queue-8"] }
# `block_on` to drive any async harness inline in tests.
futures = { workspace = true, features = ["executor"] }
# A concrete node-id type for the loopback tests.
smol_str = { workspace = true, features = ["std"] }
# AES-256-GCM backend for the transform end-to-end tests (encryption round-trip
# and key-rotation). Declared on the dev build only so the library's own build
# stays backend-free and bare-metal compile checks exercise the disabled path.
memberlist-proto = { workspace = true, default-features = false, features = [
  "tcp",
  "aes-gcm",
] }
memberlist-embedded = { workspace = true, default-features = false, features = [
  "std",
  "aes-gcm",
] }

[lints]
workspace = true
