[package]
name = "memberlist-embedded"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Transport-agnostic no_std driving core shared by the embedded memberlist drivers."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["memberlist-proto/std"]
alloc = ["memberlist-proto/alloc"]

# CIDR peer-admission allow-list. A `CidrPolicy` set via `Options::with_cidr_policy`
# filters inbound gossip by datagram source and inbound reliable connections by
# peer address at the transport boundary, AND inbound alives by the peer's
# advertised address at membership admission. no_std+alloc (the policy holds a
# hashbrown set of `ipnet` networks), so it pulls the heap tier.
cidr = ["alloc", "memberlist-proto/cidr"]

# Gossip/reliable-plane compression backends. Each pass-through enables the
# matching machine backend so a driver's `TransformOptions` can carry a
# `CompressionOptions` for that algorithm; without one the algorithm's
# `compress_gossip` falls back to plaintext and the reliable-plane bridge
# cannot pack. lz4 is no_std+alloc; snappy/zstd/brotli are std-only (mirroring
# the machine, so the tier is never silently under-selected on a no_std build).
lz4 = ["memberlist-proto/lz4"]
snappy = ["memberlist-proto/snappy"]
zstd = ["memberlist-proto/zstd"]
brotli = ["memberlist-proto/brotli"]

# Gossip-plane (unreliable) checksum backends. Each pass-through enables the
# matching machine backend so a driver's `TransformOptions` can carry a
# `ChecksumOptions` for that algorithm; without one the algorithm fails cleanly
# (`ChecksumError::Disabled`) rather than wrapping. Checksum is gossip-only —
# reliable streams rely on the stream transport's own integrity. All backends
# are no_std+alloc (mirroring the machine).
crc32 = ["memberlist-proto/crc32"]
xxhash32 = ["memberlist-proto/xxhash32"]
xxhash64 = ["memberlist-proto/xxhash64"]
xxhash3 = ["memberlist-proto/xxhash3"]
murmur3 = ["memberlist-proto/murmur3"]

# Gossip/reliable-plane AEAD encryption backends. Each pass-through enables the
# matching machine backend so a `TransformOptions` carrying a `Keyring` for that
# cipher can actually encrypt; without the backend `encrypt_gossip` returns
# `EncryptionError::UnsupportedAlgorithm` (surfaced at construction by the
# encryption-config probe, so it is never a silent runtime gossip drop). Both
# AEAD backends are no_std+alloc.
aes-gcm = ["memberlist-proto/aes-gcm"]
chacha20-poly1305 = ["memberlist-proto/chacha20-poly1305"]

[dependencies]
memberlist-proto = { workspace = true, default-features = false, features = [
  "tcp",
] }
getrandom.workspace = true
bytes.workspace = true
hashbrown = { version = "0.17", default-features = false, features = [
  "default-hasher",
] }
# The fixed-capacity, no-heap `ResolvedAddrs` resolver result. 0.9 to share the
# single version smoltcp already pulls into the graph (no second heapless major).
heapless = { version = "0.9", default-features = false }

[dev-dependencies]
smol_str.workspace = true
