[package]
name = "memberlist-machine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Sans-I/O state machine for the memberlist gossip protocol."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
tracing = ["dep:tracing"]

# Composed QUIC + memberlist Sans-I/O coordinator. Crypto-backend-agnostic:
# the caller supplies the `quinn_proto` `EndpointConfig` / `ServerConfig` /
# `ClientConfig`, built with whatever crypto backend they choose. Enable a
# crypto-backend pass-through below (e.g. `quic-rustls-ring`) to pull a
# backend into the dependency graph so those configs can be constructed.
quic = ["dep:quinn-proto", "dep:slab"]

# quinn-proto crypto-backend pass-throughs.
quic-ring = ["quic", "quinn-proto/ring"]
quic-rustls = ["quic", "quinn-proto/rustls"]
quic-rustls-ring = ["quic", "quinn-proto/rustls-ring"]
quic-aws-lc-rs = ["quic", "quinn-proto/aws-lc-rs"]
quic-aws-lc-rs-fips = ["quic", "quinn-proto/aws-lc-rs-fips"]
quic-rustls-aws-lc-rs = ["quic", "quinn-proto/rustls-aws-lc-rs"]
quic-rustls-aws-lc-rs-fips = ["quic", "quinn-proto/rustls-aws-lc-rs-fips"]

# quinn-proto auxiliary pass-throughs.
quic-bloom = ["quic", "quinn-proto/bloom"]
quic-log = ["quic", "quinn-proto/log"]
quic-rustls-log = ["quic", "quinn-proto/rustls-log"]
quic-qlog = ["quic", "quinn-proto/qlog"]
quic-platform-verifier = ["quic", "quinn-proto/platform-verifier"]

# Composed TLS-over-TCP + memberlist Sans-I/O coordinator. rustls is itself
# Sans-I/O, so the TLS record layer lives inside the coordinator; the driver
# moves only raw TCP/UDP bytes. Crypto-backend-agnostic: the caller supplies
# the rustls `ServerConfig` / `ClientConfig`, built with whatever crypto
# backend they choose. Enable a backend pass-through below (e.g.
# `tls-rustls-ring`) to pull a provider into the dependency graph.
tls = ["dep:rustls", "dep:rustls-pki-types"]

# rustls crypto-backend pass-throughs.
tls-rustls-ring = ["tls", "rustls/ring"]
tls-rustls-aws-lc-rs = ["tls", "rustls/aws_lc_rs"]
tls-rustls-aws-lc-rs-fips = ["tls", "rustls/fips"]

[dependencies]
bytes.workspace = true
indexmap.workspace = true
memberlist-wire = { workspace = true, features = ["default"] }
nodecraft = { workspace = true, features = ["default"] }
rand.workspace = true
rustc-hash = "2"
smallvec.workspace = true
smol_str.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
quinn-proto = { version = "0.11", default-features = false, optional = true }
slab = { version = "0.4", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std"], optional = true }
rustls-pki-types = { version = "1", default-features = false, optional = true }

[dev-dependencies]
rand = { workspace = true, features = ["std"] }
rcgen = "0.14"
# The quic test suite builds quinn-proto configs with the ring backend.
# Run it with a backend feature, e.g. `--features quic-rustls-ring`.
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
