[package]
name = "memberlist-machine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Sans-I/O state machine for the memberlist gossip protocol."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]

# `std` and `alloc` are independent capability tiers (std does NOT pull alloc).
# `alloc` is the minimal heap tier for no_std targets; the core machine + `tcp`
# are no_std+alloc, while `quic` (quinn-proto) and `tls` (rustls) require `std`.
std = [
  "memberlist-wire/std",
  "bytes/std",
  "indexmap/std",
  "smol_str/std",
  "thiserror/std",
  "rustc-hash/std",
]
alloc = ["memberlist-wire/alloc"]
tracing = ["dep:tracing"]

# Composed QUIC + memberlist Sans-I/O coordinator. Crypto-backend-agnostic:
# the caller supplies the `quinn_proto` `EndpointConfig` / `ServerConfig` /
# `ClientConfig`, built with whatever crypto backend they choose. Enable a
# crypto-backend pass-through below (e.g. `quic-rustls-ring`) to pull a
# backend into the dependency graph so those configs can be constructed.
quic = ["std", "dep:quinn-proto", "dep:slab"]

# quinn-proto crypto-backend pass-throughs.
quic-ring = ["quic", "quinn-proto/ring"]
quic-rustls = ["quic", "quinn-proto/rustls"]
quic-rustls-ring = ["quic", "quinn-proto/rustls-ring"]
quic-aws-lc-rs = ["quic", "quinn-proto/aws-lc-rs"]
quic-aws-lc-rs-fips = ["quic", "quinn-proto/aws-lc-rs-fips"]
quic-rustls-aws-lc-rs = ["quic", "quinn-proto/rustls-aws-lc-rs"]
quic-rustls-aws-lc-rs-fips = ["quic", "quinn-proto/rustls-aws-lc-rs-fips"]

# quinn-proto auxiliary pass-throughs.
quic-bloom = ["quic", "quinn-proto/bloom"]
quic-log = ["quic", "quinn-proto/log"]
quic-rustls-log = ["quic", "quinn-proto/rustls-log"]
quic-qlog = ["quic", "quinn-proto/qlog"]
quic-platform-verifier = ["quic", "quinn-proto/platform-verifier"]

# Composed TLS-over-TCP + memberlist Sans-I/O coordinator. rustls is itself
# Sans-I/O, so the TLS record layer lives inside the coordinator; the driver
# moves only raw TCP/UDP bytes. Crypto-backend-agnostic: the caller supplies
# the rustls `ServerConfig` / `ClientConfig`, built with whatever crypto
# backend they choose. Enable a backend pass-through below (e.g.
# `tls-rustls-ring`) to pull a provider into the dependency graph.
tls = ["std", "dep:rustls", "dep:rustls-pki-types"]

# Composed plain-TCP + memberlist Sans-I/O coordinator. The label is a
# one-time wire prefix at stream start (identical byte format to the frozen
# memberlist-proto label frame); there is no transport-level encryption.
# The driver moves raw TCP bytes; the coordinator owns the label prefix
# and the memberlist framing. Mirrors TlsEndpoint with the rustls record
# layer replaced by the raw-passthrough RawRecords codec. Needs the heap
# tier (the stream codec buffers into `Vec`).
tcp = ["alloc"]

# Compression backend pass-throughs — enable the matching memberlist-wire
# backend so callers can build CompressionOptions without a separate
# memberlist-wire dependency. Also used by the tcp unit tests that exercise
# the StreamEndpoint compress/decompress round-trip. Each pulls the capability
# tier its backend requires: lz4 is no_std+alloc; snappy/zstd/brotli are
# std-only (mirroring memberlist-wire, so the requirement is not silently
# under-selected on a no_std build).
compression-lz4 = ["alloc", "memberlist-wire/lz4"]
compression-snappy = ["std", "memberlist-wire/snappy"]
compression-zstd = ["std", "memberlist-wire/zstd"]
compression-brotli = ["std", "memberlist-wire/brotli"]

# Encryption backend pass-throughs — enable the matching memberlist-wire
# AEAD backend so callers can build EncryptionOptions without a separate
# memberlist-wire dependency. Both AEAD backends are no_std+alloc.
encryption-aes-gcm = ["alloc", "memberlist-wire/aes-gcm"]
encryption-chacha20-poly1305 = ["alloc", "memberlist-wire/chacha20-poly1305"]

# rustls crypto-backend pass-throughs.
tls-rustls-ring = ["tls", "rustls/ring"]
tls-rustls-aws-lc-rs = ["tls", "rustls/aws_lc_rs"]
tls-rustls-aws-lc-rs-fips = ["tls", "rustls/fips"]

[dependencies]
bytes.workspace = true
indexmap = { version = "2", default-features = false }
memberlist-wire = { workspace = true }
rand = { version = "0.10", default-features = false, features = ["alloc"] }
getrandom = { workspace = true }
rustc-hash = { version = "2", default-features = false }
hashbrown = { version = "0.17", default-features = false }
libm = { version = "0.2", default-features = false }
smallvec.workspace = true
smol_str.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
quinn-proto = { version = "0.11", default-features = false, optional = true }
slab = { version = "0.4", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std"], optional = true }
rustls-pki-types = { version = "1", default-features = false, optional = true }

[dev-dependencies]
rand = { workspace = true, features = ["std"] }
rcgen = "0.14"
# The quic test suite builds quinn-proto configs with the ring backend.
# Run it with a backend feature, e.g. `--features quic-rustls-ring`.
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
