[package]
name = "memberlist-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Sans-I/O state machine for the memberlist gossip protocol."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]

# `std` and `alloc` are independent capability tiers (std does NOT pull alloc).
# `alloc` is the minimal heap tier for no_std targets; the core machine + `tcp`
# are no_std+alloc, while `quic` (quinn-proto) and `tls` (rustls) require `std`.
std = [
  "bytes/std",
  "indexmap/std",
  "smol_str/std",
  "thiserror/std",
  "rustc-hash/std",
  "buffa/std",
  "cheap-clone/std",
  "triomphe/std",
  "varing/std",
  "derive_more/std",
  "aead?/std",
  "aes-gcm?/std",
  "chacha20poly1305?/std",
  "lz4_flex?/std",
  "brotli?/std",
  "crc32fast?/std",
]
alloc = ["cheap-clone/alloc", "varing/alloc"]
tracing = ["dep:tracing"]

# Composed QUIC + memberlist Sans-I/O coordinator. Crypto-backend-agnostic:
# the caller supplies the `quinn_proto` `EndpointConfig` / `ServerConfig` /
# `ClientConfig`, built with whatever crypto backend they choose. Enable a
# crypto-backend pass-through below (e.g. `quic-rustls-ring`) to pull a
# backend into the dependency graph so those configs can be constructed.
quic = ["std", "dep:quinn-proto", "dep:slab"]

# quinn-proto crypto-backend pass-throughs.
quic-ring = ["quic", "quinn-proto/ring"]
quic-rustls = ["quic", "quinn-proto/rustls"]
quic-rustls-ring = ["quic", "quinn-proto/rustls-ring"]
quic-aws-lc-rs = ["quic", "quinn-proto/aws-lc-rs"]
quic-aws-lc-rs-fips = ["quic", "quinn-proto/aws-lc-rs-fips"]
quic-rustls-aws-lc-rs = ["quic", "quinn-proto/rustls-aws-lc-rs"]
quic-rustls-aws-lc-rs-fips = ["quic", "quinn-proto/rustls-aws-lc-rs-fips"]

# quinn-proto auxiliary pass-throughs.
quic-bloom = ["quic", "quinn-proto/bloom"]
quic-log = ["quic", "quinn-proto/log"]
quic-rustls-log = ["quic", "quinn-proto/rustls-log"]
quic-qlog = ["quic", "quinn-proto/qlog"]
quic-platform-verifier = ["quic", "quinn-proto/platform-verifier"]

# Composed TLS-over-TCP + memberlist Sans-I/O coordinator. rustls is itself
# Sans-I/O, so the TLS record layer lives inside the coordinator; the driver
# moves only raw TCP/UDP bytes. Crypto-backend-agnostic: the caller supplies
# the rustls `ServerConfig` / `ClientConfig`, built with whatever crypto
# backend they choose. Enable a backend pass-through below (e.g.
# `tls-rustls-ring`) to pull a provider into the dependency graph.
tls = ["std", "dep:rustls", "dep:rustls-pki-types"]

# Composed plain-TCP + memberlist Sans-I/O coordinator. The label is a
# one-time wire prefix at stream start (identical byte format to the frozen
# memberlist-wire label frame); there is no transport-level encryption.
# The driver moves raw TCP bytes; the coordinator owns the label prefix
# and the memberlist framing. Mirrors TlsEndpoint with the rustls record
# layer replaced by the raw-passthrough RawRecords codec. Needs the heap
# tier (the stream codec buffers into `Vec`).
tcp = ["alloc"]

# Checksum backends — opt-in; the default build pulls none. Every backend is
# no_std+alloc (a software digest, no std I/O or C binding), so each pulls only
# the `alloc` tier. crc32fast defaults its own `std` feature on, so it is
# declared `default-features = false` below and its `std` is threaded into this
# crate's `std` feature; xxhash-rust and hash32 are no_std by default.
checksum-crc32 = ["alloc", "dep:crc32fast"]
checksum-xxhash32 = ["alloc", "xxhash-rust/xxh32"]
checksum-xxhash64 = ["alloc", "xxhash-rust/xxh64"]
checksum-xxhash3 = ["alloc", "xxhash-rust/xxh3"]
checksum-murmur3 = ["alloc", "dep:hash32"]

# Compression backends — opt-in; the default build pulls none. Each pulls the
# capability tier its backend requires: lz4 is no_std+alloc; snappy/zstd/brotli
# are std-only (std I/O or a C binding), so the std requirement is not silently
# under-selected on a no_std build.
compression-lz4 = ["alloc", "dep:lz4_flex"]
compression-snappy = ["std", "dep:snap"]
compression-zstd = ["std", "dep:zstd"]
compression-brotli = ["std", "dep:brotli", "brotli/std"]

# AEAD encryption backends — opt-in; no_std+alloc. `getrandom` (a hard
# dependency) supplies per-frame nonces and the `SecretKey::random_*` helpers.
encryption-aes-gcm = ["alloc", "dep:aead", "aead/alloc", "dep:aes-gcm", "aes-gcm/aes", "aes-gcm/alloc"]
encryption-chacha20-poly1305 = [
  "alloc",
  "dep:aead",
  "aead/alloc",
  "dep:chacha20poly1305",
  "chacha20poly1305/alloc",
]

# rustls crypto-backend pass-throughs.
tls-rustls-ring = ["tls", "rustls/ring"]
tls-rustls-aws-lc-rs = ["tls", "rustls/aws_lc_rs"]
tls-rustls-aws-lc-rs-fips = ["tls", "rustls/fips"]

# CIDR peer-admission allow-list ([`CidrPolicy`]), usable as an `AliveDelegate`.
# std-only: the policy holds a `std` HashSet of `ipnet` networks and filters
# inbound alives by the peer's advertised IP.
cidr = ["std", "dep:ipnet", "ipnet/std"]

[dependencies]
bytes.workspace = true
indexmap = { version = "2", default-features = false }
rand = { version = "0.10", default-features = false, features = ["alloc"] }
getrandom = { workspace = true }
rustc-hash = { version = "2", default-features = false }
hashbrown = { version = "0.17", default-features = false }
libm = { version = "0.2", default-features = false }
smallvec.workspace = true
smol_str.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
quinn-proto = { version = "0.11", default-features = false, optional = true }
slab = { version = "0.4", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std"], optional = true }
rustls-pki-types = { version = "1", default-features = false, optional = true }
ipnet = { workspace = true, optional = true }

# Wire types, codec, and framing.
buffa = { version = "0.7", default-features = false }
cheap-clone = { workspace = true, features = ["smol_str_0_3", "bytes_1", "triomphe_0_1"] }
derive_more = { workspace = true, features = ["display", "from", "is_variant", "unwrap", "try_unwrap"] }
paste = { workspace = true }
triomphe = { workspace = true }
varing = { workspace = true }

# Checksum backends — opt-in (see the checksum-* features). All no_std-capable:
# crc32fast defaults `std` on so it is pinned `default-features = false` (its
# `std` is re-enabled via this crate's `std` feature); xxhash-rust and hash32
# are no_std by default.
crc32fast = { version = "1", optional = true, default-features = false }
xxhash-rust = { version = "0.8", optional = true, default-features = false }
hash32 = { version = "1", optional = true, default-features = false }

# Compression backends — opt-in (see the compression-* features).
brotli = { version = "8", optional = true, default-features = false }
snap = { version = "1", optional = true }
lz4_flex = { version = "0.13", optional = true, default-features = false }
zstd = { version = "0.13", optional = true }

# AEAD backends — opt-in (see the encryption-* features).
aead = { version = "0.5", optional = true, default-features = false }
aes-gcm = { version = "0.10", optional = true, default-features = false }
chacha20poly1305 = { version = "0.10", optional = true, default-features = false }

[build-dependencies]
buffa-build = "0.7"

[dev-dependencies]
rand = { workspace = true, features = ["std"] }
rcgen = "0.14"
# The quic test suite builds quinn-proto configs with the ring backend.
# Run it with a backend feature, e.g. `--features quic-rustls-ring`.
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
